# git-commit-ai

./: .git-commit-ai.yml.example  README.md  finalize-install.sh  git-commit-ai  install-remote.sh  install.sh  prompt_config.py  pyproject.toml  uninstall.sh
